# media

./: .gitignore  AGENTS.md  BUILD_INSTRUCTIONS.md  BUILD_INSTRUCTIONS_SESSION2.md  BUILD_INSTRUCTIONS_SESSION3.md  BUILD_INSTRUCTIONS_SESSION4.md  BUILD_INSTRUCTIONS_SESSION5.md  BUILD_INSTRUCTIONS_SESSION6.md  BUILD_INSTRUCTIONS_SESSION7.md  BUILD_INSTRUCTIONS_SESSION8.md  BUILD_INSTRUCTIONS_SESSION9.md  README.md  SESSION2_GOAL.md  SESSION3_GOAL.md  SESSION4_GOAL.md  SESSION5_GOAL.md  SESSION6_GOAL.md  SESSION7_GOAL.md  SESSION8_GOAL.md  SESSION9_GOAL.md  biome.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.scripts.json  tsconfig.test.json  tsup.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: competitive-gaps.md
docs/architecture/: 01-goals-and-requirements.md  02-decision-records.md  03-system-architecture.md  04-capability-router-and-ladder.md  05-driver-contracts.md  06-execution-and-runtime.md  07-public-api.md  08-packaging-and-loading.md  09-operations.md  10-browser-capability-matrix.md  11-testing-and-validation.md  12-roadmap.md  13-glossary.md  14-benchmarks.md  README.md
docs/notes/: avi.md  decrypt-cens.md  hls-sample-aes.md  mpegts-hls.md  session8-avi-mux.md  session8-metadata-write.md  session8-wav-mux.md  session9-flac-keyframe-trim-fast-path.md  session9-flac-mkv-mux-fast-path.md  session9-flac-ogg-streamcopy-target.md  session9-flac-probe-demux-packet-info.md  session9-mp4-demux-byte-backed-packet-info.md  session9-mp4-faststart-metadata-prefetch.md  session9-mp4-full-range-trim-rewrite.md  session9-mp4-micro-mux-fast-path.md  session9-mp4-packet-table.md  session9-ogg-audio-webm-mux-fast-path.md  session9-ogg-demux-packet-table.md  session9-ogg-opus-probe-fast-path.md  session9-ogg-prepared-packet-mux.md  session9-probe-decode-source-handoff.md  session9-tiny-h264-faststart-probe.md  session9-tiny-m4a-probe.md  session9-wav-bounded-probe.md  session9-wav-identity-transcode.md  session9-wav-pcm-mux-fast-path.md  (+3 more)
examples/: README.md  convert.ts  mux.ts  probe.ts  trim.ts  util.ts
fixtures/: README.md  manifest.json
scripts/: anti-cheat.ts  bake-goldens.ts  bench-audio-stream.ts  bench-av1.ts  bench-chain.ts  bench-colorspace.ts  bench-containers.ts  bench-dsp.ts  bench-flac-author.ts  bench-flac-encode.ts  bench-flac.ts  bench-image.ts  bench-metadata-tags.ts  bench-opus.ts  bench-pool.ts  bench-preload.ts  bench-session6-r1.ts  bench-session6-r2.ts  bench-session6-r4.ts  bench-session9-mp4-packet-table.ts  bench-session9-webm-probe.ts  bench-sources.ts  bench-streaming.ts  bench-vpx.ts  bench-webm-fragment.ts  bench-webm-trim.ts  check-budgets.ts  fetch-fixtures.ts  vendor-wasm.ts  verify-package-install.ts
src/: core.ts  dist-smoke.test.ts  image.ts  index.ts  public-surface.test.ts  version.ts
src/codecs/wasm-aac/crate/: Cargo.toml
src/codecs/wasm-aac/crate/src/: lib.rs
src/codecs/wasm-mp3/crate/: Cargo.toml
src/codecs/wasm-mp3/crate/src/: lib.rs
src/codecs/wasm-vorbis/crate/: Cargo.toml
src/codecs/wasm-vorbis/crate/src/: lib.rs
(+441 files in other folders)
