[package]
name = "aac_wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
symphonia-core = { version = "0.6", default-features = false }
symphonia-common = "0.6"
symphonia-codec-aac = "0.6"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
